[gd_scene load_steps=2 format=3 uid="uid://i8t04i3pu053"]

[ext_resource type="Script" path="res://scenes/enemy_AI/enemy_ai.gd" id="1_8xsrn"]

[node name="EnemyAI" type="Node2D"]
script = ExtResource("1_8xsrn")

[node name="GoldTimer" type="Timer" parent="."]
autostart = true

[node name="MasterTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="DecisionTimer" type="Timer" parent="."]
wait_time = 0.33
autostart = true

[connection signal="timeout" from="GoldTimer" to="." method="_on_gold_timer_timeout"]
[connection signal="timeout" from="MasterTimer" to="." method="_on_master_timer_timeout"]
[connection signal="timeout" from="DecisionTimer" to="." method="_on_decision_timer_timeout"]
